# location-numerals

./: CMakeLists.txt  README.md
include/: LocationNumerals.h
src/: LocationNumerals.cpp  main.cpp
